Added some changes in my index.html and added images

--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ body {
 }
 
 .hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://via.placeholder.com/1500x500');
+    background: linear-gradient(rgba(89, 202, 202, 0.5), rgba(0, 0, 0, 0.5)), url('https://via.placeholder.com/1500x500');
     background-size: cover;
-    color: white;
+    color: rgb(0, 0, 0);
     text-align: center;
     padding: 100px 20px;
 }
