--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ body {
     object-fit: cover;
 }
 
+.profile{
+    width: 250px;
+    height: 250px;
+}
+
 footer {
     background: #343a40;
     color: white;
